[gd_scene load_steps=3 format=3 uid="uid://bjw6sh7j2lsq3"]

[ext_resource type="Script" path="res://scripts/Creep/creep.gd" id="1_g5d1d"]

[sub_resource type="Curve2D" id="Curve2D_uqp78"]

[node name="Creep" type="Node2D"]

[node name="creep" type="Node2D" parent="."]
script = ExtResource("1_g5d1d")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(332.893, 612.805)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_uqp78")

[node name="MobPathFollow" type="PathFollow2D" parent="MobPath"]
